Integrating partials and templates html at project

--- a/lab/templates/lab/pages/alterar_dados.html
+++ b/lab/templates/lab/pages/alterar_dados.html
@@ -1,12 +1,10 @@
 {% extends 'global/base.html' %}    
 
-{% block title %}Home |{% endblock title %}
+{% block title %}Alterar |{% endblock title %}
 
 {% block content %}
 {% include 'global/partials/messages.html' %}
     <div class="main-content">
-        <h1>Home</h1>
+        <h1>Alterar dados</h1>
     </div>
 {% endblock content %}
-
-
