--- a/lab/templates/lab/pages/laudo.html
+++ b/lab/templates/lab/pages/laudo.html
@@ -1,6 +1,6 @@
 {% extends 'global/base.html' %}    
 
-{% block title %}Home |{% endblock title %}
+{% block title %}Laudo |{% endblock title %}
 
 {% block content %}
 {% include 'global/partials/messages.html' %}
@@ -8,5 +8,3 @@
         <h1>Home</h1>
     </div>
 {% endblock content %}
-
-
