--- a/base_templates/global/partials/header.html
+++ b/base_templates/global/partials/header.html
@@ -2,8 +2,8 @@
     <div class="main-header container">
         <h1>
             <a class="main-logo" href= "#">
-                <i class="fas fa-utensils main-logo-icon"></i>
-                <span class="main-logo-text">Receitas</span>
+                
+                <span class="main-logo-text">laboratório</span>
             </a>
         </h1>
     </div>
