--- a/lab/templates/lab/pages/laudo_enviar.html
+++ b/lab/templates/lab/pages/laudo_enviar.html
@@ -1,12 +1,10 @@
 {% extends 'global/base.html' %}    
 
-{% block title %}Home |{% endblock title %}
+{% block title %}Envio de laudo |{% endblock title %}
 
 {% block content %}
 {% include 'global/partials/messages.html' %}
     <div class="main-content">
-        <h1>Home</h1>
+        <h1>Laudo</h1>
     </div>
 {% endblock content %}
-
-
