--- a/base_static/global/css/styles.css
+++ b/base_static/global/css/styles.css
@@ -68,6 +68,14 @@ h5 {
     font-family: var(--font-headings)
 }
 
+/* teste */
+.teste-home {
+    margin: 0 auto;
+    align-items: center;
+    justify-content: center;
+    width: fit-content; 
+}
+
 .container {
     max-width: 144rem;
     margin: 0 auto;
@@ -75,7 +83,7 @@ h5 {
 }
 
 .main-header-container {
-    background-color: var(--color-primary-dark);
+    background-color: rgba(69, 143, 255, 1);
 }
 
 .main-logo {
@@ -140,112 +148,11 @@ h5 {
 .main-content {
     padding-top: 0;
 }
-
-.main-content-list {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(340px, 1fr));
-    gap: var(--spacing-gutter-large);
-}
-
-.recipe {
-    background: var(--color-white);
-    box-shadow: -5px 5px 10px rgba(0, 0, 0, .2);
-    transform: scale(1);
-    transition: all 300ms ease-in-out;
-    border-radius: .7rem;
-    overflow: hidden;
-}
-
-.recipe img {
-    max-width: 100%;
-}
-
-.recipe-list-item {
-    max-width: 64rem;
-    height: fit-content;
-}
-
-.recipe-list-item:hover {
-    transform: scale(1.02);
-    box-shadow: -8px 8px 18px rgba(0, 0, 0, .3);
-}
-
-.recipe-title-container {
-    padding: var(--spacing-gutter-medium);
-    padding-bottom: 2rem;
-}
-
-.recipe-title-container a{
-    text-decoration: none;
-    color: var(--color-primary-dark);
-}
-
-.recipe-author {
-    padding: 0 var(--spacing-gutter-medium);
-}
-
-.recipe-content {
-    padding: var(--spacing-gutter-medium);
-    padding-top: 2rem;
-}
-
-.recipe-author-item {
-    color: var(--color-gray-4);
-    margin-right: 1rem;
-}
-
-.recipe-author a {
-    color: var(--color-primary-dark);
-    transition: all 300ms ease-in-out;
-    text-decoration: none;
-}
-
-.recipe-author a:hover {
-    color: var(--color-primary);
-}
-
-.recipe-meta-container {
-    display: flex;
-    flex-flow: row wrap;
-    padding: var(--spacing-gutter-medium);
-    background: var(--color-gray-0);
-}
-
-.recipe-meta {
-    display: flex;
-    flex-flow: column nowrap;
-    flex-shrink: 1;
-    flex-grow: 1;
-    text-align: center;
-}
-
-.recipe-meta-title {
-    font-size: 1.6rem;
-}
-
-.recipe-footer a {
-    background: var(--color-primary-dark);
-    display: block;
-    text-align: center;
-    color: white;
-    text-decoration: none;
-    padding: 1.5rem var(--spacing-gutter-medium);
-    transition: all 300ms ease-in-out;
-}
-
-.recipe-footer a:hover {
-    filter: brightness(2.2);
-}
-
-.main-content-detail  .recipe-list-item {
-    max-width: 84rem;
-    margin: 0 auto;
-}
   
 .main-content-detail .recipe-list-item:hover {
     transform: scale(1);
     box-shadow: -5px 5px 15px rgba(0, 0, 0, 0.2);
-  }
+}
 
 .preparation-steps{
     padding: var(--spacing-gutter-medium);
@@ -255,9 +162,12 @@ h5 {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background: var(--color-primary-dark);
+    background-color: rgba(69, 143, 255, 1);
     color: var(--color-white);
     padding: var(--spacing-gutter-large);
+    position: fixed;
+    bottom: 0;
+    width: 100%;
 }
 
 .main-footer a {
@@ -395,6 +305,83 @@ h5 {
   background: var(--color-debug-light);
   color: var(--color-debug-dark);
 }
+
+/* Menu */
+
+.hidden-text {
+    display: none;
+}
+
+.menu-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    width: 260px;
+    min-height: 100vh;
+    overflow-y: auto;
+    background: var(--color-primary-dark);
+    z-index: 2;
+    transition: all 300ms ease-in-out;
+}
+  
+.menu-container a {
+    color: var(--color-white);
+}
+
+.menu-hidden {
+    left: -255px;
+}
+  
+.button-show-menu {
+    position: fixed;
+    left: 265px;
+    top: 2rem;
+    color: var(--color-white);
+    background-color: var(--color-primary-dark);
+    border: none;
+    font-size: 2rem;
+    z-index: 3;
+    padding: 1rem;
+    visibility: hidden;
+    opacity: 0;
+    transition: all 300ms ease-in-out;
+    border-radius: 0 4px 4px 0;
+    cursor: pointer;
+}
+  
+.button-show-menu-visible {
+    visibility: visible;
+    opacity: 1;
+    left: 5px;
+}
+  
+.button-close-menu {
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    color: var(--color-white);
+    background: none;
+    border: none;
+    font-size: 2rem;
+    z-index: 3;
+    cursor: pointer;
+}
+  
+.menu-nav {
+    display: flex;
+    flex-flow: column wrap;
+    font-family: var(--font-headings);
+    font-size: 2rem;
+}
+  
+.menu-nav a {
+    width: 100%;
+    padding: 1rem;
+    text-decoration: none;
+}
+
+
 /* Generics */
 
 .center {
