--- a/lab/templates/lab/pages/home.html
+++ b/lab/templates/lab/pages/home.html
@@ -5,7 +5,7 @@
 {% block content %}
 {% include 'global/partials/messages.html' %}
     <div class="main-content">
-        <h1>Home</h1>
+        <h1 class="teste-home">Home</h1>
     </div>
 {% endblock content %}
 
