--- a/lab/templates/lab/pages/laudo_enviar.html
+++ b/lab/templates/lab/pages/laudo_enviar.html
@@ -5,6 +5,6 @@
 {% block content %}
 {% include 'global/partials/messages.html' %}
     <div class="main-content">
-        <h1>Laudo</h1>
+        <h1>Laudo enviar</h1>
     </div>
 {% endblock content %}
