--- a/base_static/global/css/styles.css
+++ b/base_static/global/css/styles.css
@@ -57,6 +57,20 @@ body {
     font-family: var(--font-primary);
     background-color: var(--color-gray-1);
     color: var(--color-dark-text);
+    height: auto;
+}
+html, body {
+    height: 100%;
+}
+
+#content {
+    flex: 1;
+}
+
+.main-content-container {
+    padding-bottom: var(--spacing-gutter-medium);
+    margin-bottom: var(--spacing-gutter-large);
+    flex: 1;
 }
 
 h1,
@@ -76,14 +90,26 @@ h5 {
     width: fit-content; 
 }
 
+/*  Header  */
 .container {
     max-width: 144rem;
     margin: 0 auto;
-    padding: var(--spacing-gutter-medium)
+    height: 12rem;
 }
 
 .main-header-container {
     background-color: rgba(69, 143, 255, 1);
+}
+
+.image-logo {
+    width: 143.5px; height: 88.5px;
+    margin-left: 6rem;
+    margin-top: 1rem;
+    
+}
+
+.main-logo-text {
+    margin-top: -7rem;
 }
 
 .main-logo {
@@ -102,6 +128,7 @@ h5 {
     margin-right: 2rem;
 }
 
+/*  SEARCH DE PESQUISA  */
 .search-form {
     border: .2rem solid var(--color-primary-dark);
     max-width: 64rem;
@@ -145,8 +172,112 @@ h5 {
     color: var(--color-primary);
 }
 
+/*  TUDO DA RECEITA  */
 .main-content {
     padding-top: 0;
+    
+    
+}
+
+.main-content-list {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(340px, 1fr));
+    gap: var(--spacing-gutter-large);
+}
+
+.recipe {
+    background: var(--color-white);
+    box-shadow: -5px 5px 10px rgba(0, 0, 0, .2);
+    transform: scale(1);
+    transition: all 300ms ease-in-out;
+    border-radius: .7rem;
+    overflow: hidden;
+}
+
+.recipe img {
+    max-width: 100%;
+}
+
+.recipe-list-item {
+    max-width: 64rem;
+    height: fit-content;
+}
+
+.recipe-list-item:hover {
+    transform: scale(1.02);
+    box-shadow: -8px 8px 18px rgba(0, 0, 0, .3);
+}
+
+.recipe-title-container {
+    padding: var(--spacing-gutter-medium);
+    padding-bottom: 2rem;
+}
+
+.recipe-title-container a{
+    text-decoration: none;
+    color: var(--color-primary-dark);
+}
+
+.recipe-author {
+    padding: 0 var(--spacing-gutter-medium);
+}
+
+.recipe-content {
+    padding: var(--spacing-gutter-medium);
+    padding-top: 2rem;
+}
+
+.recipe-author-item {
+    color: var(--color-gray-4);
+    margin-right: 1rem;
+}
+
+.recipe-author a {
+    color: var(--color-primary-dark);
+    transition: all 300ms ease-in-out;
+    text-decoration: none;
+}
+
+.recipe-author a:hover {
+    color: var(--color-primary);
+}
+
+.recipe-meta-container {
+    display: flex;
+    flex-flow: row wrap;
+    padding: var(--spacing-gutter-medium);
+    background: var(--color-gray-0);
+}
+
+.recipe-meta {
+    display: flex;
+    flex-flow: column nowrap;
+    flex-shrink: 1;
+    flex-grow: 1;
+    text-align: center;
+}
+
+.recipe-meta-title {
+    font-size: 1.6rem;
+}
+
+.recipe-footer a {
+    background: var(--color-primary-dark);
+    display: block;
+    text-align: center;
+    color: white;
+    text-decoration: none;
+    padding: 1.5rem var(--spacing-gutter-medium);
+    transition: all 300ms ease-in-out;
+}
+
+.recipe-footer a:hover {
+    filter: brightness(2.2);
+}
+
+.main-content-detail  .recipe-list-item {
+    max-width: 84rem;
+    margin: 0 auto;
 }
   
 .main-content-detail .recipe-list-item:hover {
@@ -163,7 +294,6 @@ h5 {
     align-items: center;
     justify-content: space-between;
     background-color: rgba(69, 143, 255, 1);
-    color: var(--color-white);
     padding: var(--spacing-gutter-large);
     position: fixed;
     bottom: 0;
@@ -217,6 +347,7 @@ h5 {
   margin: 0.5rem 0;
   font-size: 1.4rem;
   list-style-type: none;
+  
 }
 
 .errorlist {
@@ -234,6 +365,7 @@ h5 {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
     gap: calc(var(--spacing-gutter-medium) / 2) var(--spacing-gutter-medium);
+    
 }
 
 .form-content button {
@@ -242,6 +374,7 @@ h5 {
     background: var(--color-primary-dark);
     color: var(--color-white);
 }
+
 
 .inline-form {
     display: inline;
@@ -349,6 +482,11 @@ h5 {
     border-radius: 0 4px 4px 0;
     cursor: pointer;
 }
+.button-show-menu:hover {
+    transition: all 150ms ease-in-out;
+    color: #959595;
+}
+  
   
 .button-show-menu-visible {
     visibility: visible;
@@ -367,6 +505,10 @@ h5 {
     z-index: 3;
     cursor: pointer;
 }
+.button-close-menu :hover{
+    transition: all 150ms ease-in-out;
+    color: #959595;
+}
   
 .menu-nav {
     display: flex;
@@ -379,6 +521,11 @@ h5 {
     width: 100%;
     padding: 1rem;
     text-decoration: none;
+}
+
+.menu-nav a:hover {
+    transition: all 300ms ease-in-out;
+    color: #959595;
 }
 
 
