--- a/base_templates/global/partials/form.html
+++ b/base_templates/global/partials/form.html
@@ -29,7 +29,7 @@
 
       <div class="form-content form-content-grid">
         <div class="form-group">
-          <button type="submit">Enviar</button>
+          <button type="submit" class="button-padding">Enviar</button>
         </div>
       </div>
       
