--- a/base_templates/global/partials/header.html
+++ b/base_templates/global/partials/header.html
@@ -1,8 +1,7 @@
 <header class="main-header-container">
     <div class="main-header container">
-        <div class="image-logo">
-            <img src="{{ lab.logo.url }}" alt="Temporário">
-        </div>
+        <img src="/media/lab/logo/ah-logo.png" alt="Logo" class="image-logo">
+        
         <h1>
             <a class="main-logo" href= "{% url 'lab:home' %}">
                 
