--- a/base_templates/global/partials/form.html
+++ b/base_templates/global/partials/form.html
@@ -29,9 +29,10 @@
 
       <div class="form-content form-content-grid">
         <div class="form-group">
-          <button type="submit" class="button-padding">Enviar</button>
+          <button type="submit" >Enviar</button>
         </div>
       </div>
-      
+      <br> <br> <br> <br> <br> <br> <br>
+     
     </form>
   </div>
