--- a/base_templates/global/partials/menu.html
+++ b/base_templates/global/partials/menu.html
@@ -14,11 +14,15 @@
         <a href="{% url 'lab:home' %}">Página inicial</a>
   
         {% if user.is_authenticated %}
-         
+    
+        <a href="{%url 'lab:cadastro_paciente'%}"> Cadastro paciente </a>
+        <a href="{%url 'lab:envio_laudo'%}"> Enviar laudo </a>
+        <a href="{%url 'lab:laudo'%}"> Consultar laudo </a>
+        <a href="{%url 'lab:pesquisa'%}"> Pesquisar dados </a>
+        <a href="{%url 'lab:alterar_dados'%}"> Alterar dados </a>
         
         <a class="authors-logout-link" href="{% url 'authors:logout' %}">Sair</a>
         {% include 'authors/partials/form_logout.html' %}
-        <a href="{%url 'lab:cadastro_paciente'}"></a>
 
         {% else %}
           <a href="{% url 'authors:login' %}">Login</a>
