--- a/lab/templates/lab/pages/home.html
+++ b/lab/templates/lab/pages/home.html
@@ -6,6 +6,7 @@
 {% include 'global/partials/messages.html' %}
     <div class="main-content">
         <h1 class="teste-home">Home</h1>
+        <p class="paragraf">Seja bem vindo a minha pagina, sinta se a vontade</p>
     </div>
 {% endblock content %}
 
