--- a/base_templates/global/partials/form.html
+++ b/base_templates/global/partials/form.html
@@ -32,6 +32,6 @@
           <button type="submit" >Enviar</button>
         </div>
       </div>
-     
+     {% include "global/partials/space.html" %}
     </form>
 </div>
