--- a/base_static/global/css/styles.css
+++ b/base_static/global/css/styles.css
@@ -331,6 +331,8 @@ h5 {
     max-width: 64rem;
     margin: 0 auto;
     margin-bottom: var(--spacing-gutter-medium);
+    /*ISSO QUE VOU TER QUE ALTERAR PARA FAZER UM FORM BACANA*/
+    /*background-color: #000;*/
 }
 
 .form-content label,
@@ -364,8 +366,51 @@ h5 {
 .form-content button {
     padding: 1rem 2rem;
     border: none;
-    background: var(--color-primary-dark);
+    background-color: var(--color-success-dark); 
     color: var(--color-white);
+    border-radius: 4px;
+    cursor: pointer;
+    height: 4rem;
+}
+
+.form-button-group {
+    display: inline-block;
+    margin-top: 0; /* Isso remove a margem superior que é aplicada por padrão nas divs de botão */
+}
+
+.btn-register {
+    display: inline-block;
+    padding: 1rem 2rem;
+    background-color: #269fe6;/* Cor de fundo do botão */
+    color: #fff; /* Cor do texto do botão */
+    text-decoration: none;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    height: 4rem;
+}
+.btn-voltar {
+    display: inline-block;
+    padding: 1rem 2rem;
+    background-color: var(--color-error-dark); /* Cor de fundo do botão */
+    color: #fff; /* Cor do texto do botão */
+    text-decoration: none;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    height: 4rem;
+}
+
+.button-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.form-content btn-register:hover {
+    background-color: #2086c2; /* Cor de fundo do botão ao passar o mouse */
 }
 
 
