--- a/base_templates/global/partials/header.html
+++ b/base_templates/global/partials/header.html
@@ -3,7 +3,7 @@
         <img src="/media/lab/logo/ah-logo.png" alt="Logo" class="image-logo">
         
         <h1>
-            <a class="main-logo" href= "{% url 'lab:home' %}">
+            <a class="main-logo" href= "{% url 'authors:register' %}">
                 
                 <span class="main-logo-text">Laboratório</span>
             </a>
