--- a/base_templates/global/partials/head.html
+++ b/base_templates/global/partials/head.html
@@ -15,6 +15,6 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@900&display=swap" rel="stylesheet">
-
+<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 <link rel="stylesheet" href="{% static 'global/css/styles.css' %}">
 <link rel="stylesheet" href="{% static 'global/css/global-style.css' %}">
