Fix will happen to give authorization to superuser

--- a/lab/templates/lab/pages/laudo_enviar.html
+++ b/lab/templates/lab/pages/laudo_enviar.html
@@ -5,6 +5,7 @@
 {% block content %}
 {% include 'global/partials/messages.html' %}
     <div class="main-content">
-        <h1>Laudo enviar</h1>
+        <h2 class="teste-home">Envie a imagem microscópica com os seguintes dados</h2>
+        {% include "global/partials/form.html" %}
     </div>
 {% endblock content %}
