--- a/base_templates/global/partials/menu.html
+++ b/base_templates/global/partials/menu.html
@@ -16,9 +16,9 @@
         {% if user.is_authenticated %}
     
         <a href="{%url 'lab:cadastro_paciente'%}"> Cadastro paciente </a>
-        <a href="{%url 'lab:envio_laudo'%}"> Enviar laudo </a>
-        <a href="{%url 'lab:laudo'%}"> Consultar laudo </a>
-        <a href="{%url 'lab:pesquisa'%}"> Pesquisar dados </a>
+        <a href="{%url 'lab:laudo_enviar'%}"> Enviar laudo </a>
+        <a href="{%url 'lab:laudo_consultar'%}"> Consultar laudo </a>
+        <a href="{%url 'lab:pesquisa'%}"> Pesquisar paciente </a>
         <a href="{%url 'lab:alterar_dados'%}"> Alterar dados </a>
         
         <a class="authors-logout-link" href="{% url 'authors:logout' %}">Sair</a>
