--- a/lab/templates/lab/pages/alterar_dados.html
+++ b/lab/templates/lab/pages/alterar_dados.html
@@ -5,6 +5,6 @@
 {% block content %}
 {% include 'global/partials/messages.html' %}
     <div class="main-content">
-        <h1>Alterar dados</h1>
+        <h2 class="teste-home">Alterar dados</h2>
     </div>
 {% endblock content %}
