--- a/lab/templates/lab/pages/cadastro_paciente.html
+++ b/lab/templates/lab/pages/cadastro_paciente.html
@@ -5,6 +5,6 @@
 {% block content %}
 {% include 'global/partials/messages.html' %}
     <div class="main-content">
-        <h1>Paciente</h1>
+        <h2 class="teste-home">Paciente</h2>
     </div>
 {% endblock content %}
