--- a/lab/templates/lab/pages/laudo_consultar.html
+++ b/lab/templates/lab/pages/laudo_consultar.html
@@ -1,10 +1,12 @@
-{% extends 'global/base.html' %}    
+{% extends 'global/base_search_page.html' %}    
 
 {% block title %}Laudo |{% endblock title %}
 
 {% block content %}
 {% include 'global/partials/messages.html' %}
     <div class="main-content">
-        <h1>Laudo</h1>
+        <h3 class="teste-home">
+            Pesquisar laudo por paciente, data ou identficador
+        </h3>
     </div>
 {% endblock content %}
