--- a/lab/templates/lab/pages/pesquisa.html
+++ b/lab/templates/lab/pages/pesquisa.html
@@ -1,10 +1,10 @@
-{% extends 'global/base.html' %}    
+{% extends 'global/base_search_page.html' %}    
 
 {% block title %}Pesquisa |{% endblock title %}
 
 {% block content %}
 {% include 'global/partials/messages.html' %}
     <div class="main-content">
-        <h1>Pesquisa</h1>
+        <h2 class="teste-home">Pesquisa de pacientes e seus laudos</h2>
     </div>
 {% endblock content %}
