--- a/base_templates/global/partials/header.html
+++ b/base_templates/global/partials/header.html
@@ -3,10 +3,8 @@
         <img src="/media/lab/logo/ah-logo.png" alt="Logo" class="image-logo">
         
         <h1>
-            <a class="main-logo" href= "{% url 'authors:register' %}">
-                
-                <span class="main-logo-text">Laboratório</span>
-            </a>
+            <span class="main-logo main-logo-text">Laboratório</span>
         </h1>
+
     </div>
 </header>
