--- a/base_templates/global/partials/menu.html
+++ b/base_templates/global/partials/menu.html
@@ -15,7 +15,7 @@
   
         {% if user.is_authenticated %}
     
-        <a href="{%url 'lab:cadastro_paciente'%}"> Cadastro paciente </a>
+        <a href="{%url 'lab:cadastro_paciente'%}"> Cadastro de usuário </a>
         <a href="{%url 'lab:laudo_enviar'%}"> Enviar laudo </a>
         <a href="{%url 'lab:laudo_consultar'%}"> Consultar laudo </a>
         <a href="{%url 'lab:pesquisa'%}"> Pesquisar paciente </a>
