--- a/base_templates/global/partials/menu.html
+++ b/base_templates/global/partials/menu.html
@@ -1,3 +1,4 @@
+{% load permission_tags %}
 <button class="button-show-menu button-show-menu-visible">
     <i class="fas fa-bars"></i>
     <span class="hidden-text"></span>
@@ -11,23 +12,38 @@
   
     <div class="menu-content">
       <nav class="menu-nav">
-        <a href="{% url 'lab:home' %}">Página inicial</a>
-  
-        {% if user.is_authenticated %}
-    
-        <a href="{%url 'lab:cadastro_paciente'%}"> Cadastro de usuário </a>
-        <a href="{%url 'lab:laudo_enviar'%}"> Enviar laudo </a>
-        <a href="{%url 'lab:laudo_consultar'%}"> Consultar laudo </a>
-        <a href="{%url 'lab:pesquisa'%}"> Pesquisar paciente </a>
-        <a href="{%url 'lab:alterar_dados'%}"> Alterar dados </a>
-        
-        <a class="authors-logout-link" href="{% url 'authors:logout' %}">Sair</a>
-        {% include 'authors/partials/form_logout.html' %}
 
+        {% if user.is_authenticated %}
+          {% if user|can:'pagina_inicial'%}
+            <a href="{%url 'lab:home' %}"> Página inicial </a>
+          {% endif %}
+
+          {% if user|can:'cadastrar_paciente'%}
+            <a href="{%url 'lab:cadastro_usuario'%}"> Cadastro de usuário </a>
+          {% endif %}
+
+          {% if user|can:'pesquisar_paciente'%}
+            <a href="{%url 'lab:pesquisa'%}"> Pesquisar paciente </a>
+          {% endif %}
+
+          {% if user|can:'alterar_dados'%}
+            <a href="{%url 'lab:alterar_dados'%}"> Alterar dados </a>
+          {% endif %}
+
+          {% if user|can:'enviar_imagem'%}
+            <a href="{%url 'lab:laudo_enviar'%}"> Enviar laudo </a>
+          {% endif %}
+
+          {% if user|can:'visualizar_laudo'%}
+            <a href="{%url 'lab:laudo_consultar'%}"> Consultar laudo </a>
+          {% endif %}
+            <a class="authors-logout-link" href="{% url 'authors:logout' %}">Sair</a>
+            {% include 'authors/partials/form_logout.html' %}
         {% else %}
+
           <a href="{% url 'authors:login' %}">Login</a>
           <a href="{% url 'authors:register' %}">Cadastrar</a>
-      {% endif %}
+        {% endif %}
       </nav>
     </div>
   </div>
