Controlling urls access by user permissions

--- a/base_templates/global/partials/form_temp.html
+++ b/base_templates/global/partials/form_temp.html
@@ -51,6 +51,8 @@
                         </div>
 
                         <!-- botão para se cadastrar precisa estilizar -->
+
+                        <!-- AQUI É O BOTAO DE CADASTRO QUE NAO VAI APARECER
                         {% if is_registration_page %}
                             
                             <a href="{{ back_url}}" class="btn-voltar-temp">Voltar</a>
@@ -60,6 +62,8 @@
                             <a href="{% url 'authors:register' %}" class="btn-register-temp">Cadastrar-se</a>
                             
                         {% endif %}
+                        -->
+                        
                     </div>
                 </div>
             </div>
