--- a/base_templates/global/partials/menu.html
+++ b/base_templates/global/partials/menu.html
@@ -30,7 +30,7 @@
             <a href="{%url 'lab:alterar_dados'%}"> Alterar dados </a>
           {% endif %}
 
-          {% if user|can:'enviar_imagem'%}
+          {% if user|can:'laudo_enviar_permission'%}
             <a href="{%url 'lab:laudo_enviar'%}"> Enviar laudo </a>
           {% endif %}
 
