--- a/authors/templates/authors/pages/register_view_recpt.html
+++ b/authors/templates/authors/pages/register_view_recpt.html
@@ -5,7 +5,7 @@
 {% block content %}
 
   <div class="main-content center container">
-    <h2>Registrar usuário</h2>
+    <h2>Registrar usuário de recepcão</h2>
   </div>
 
   {% include 'global/partials/messages.html' %}  
