--- a/lab/templates/lab/pages/pesquisa.html
+++ b/lab/templates/lab/pages/pesquisa.html
@@ -1,10 +1,18 @@
 {% extends 'global/base_search_page.html' %}    
 
-{% block title %}Pesquisa |{% endblock title %}
+{% block title %}{{ page_title }}{% endblock title %}
 
 {% block content %}
-{% include 'global/partials/messages.html' %}
-    <div class="main-content">
-        <h2 class="teste-home">Pesquisa de pacientes e seus laudos</h2>
+    <div class="main-content main-content-list container">
+        {% for patient in patients %}
+        
+            {% include 'lab/partials/user.html' %}
+            {% empty %}
+
+            <div class="center m-y">
+                <h1>Nenhum usuário encontrado aqui</h1>
+            </div>
+
+        {% endfor %}
     </div>
 {% endblock content %}
