--- a/base_static/global/css/styles.css
+++ b/base_static/global/css/styles.css
@@ -57,7 +57,7 @@ html {
     font-size: 62%;
 }
 html, body {
-    height: 100%; /* Garante que o html e o body ocupem toda a altura da tela */
+    height: 100%; 
 }
 
 body {
@@ -65,6 +65,8 @@ body {
     font-family: var(--font-primary);
     background-color: var(--color-gray-1);
     color: var(--color-dark-text);
+    height: 100%;
+    width: 100%;
 }
 
 body, h1, h2, h3, h4, h5, h6, p {
@@ -134,6 +136,7 @@ h5 {
     border: .2rem solid var(--color-primary-dark);
     max-width: 64rem;
     margin: 0 auto;
+    margin-top: 2rem;
     border-radius: .4rem;
     position: relative;
     transition: all 300ms ease-in-out;
@@ -176,7 +179,8 @@ h5 {
 /*  TUDO DA RECEITA  */
 .main-content {
     padding-top: 0;
-    margin: 3rem; /* Espaço entre o container e todas as direções*/
+    margin: 3rem; 
+    margin-bottom: 6rem; /* improviso HTML NÃO OCUPA TUDO*/
 }
 
 .main-content-login {
@@ -315,11 +319,15 @@ h5 {
 }
 
 /*pagination CSS*/
-
 .pagination-content {
     display: flex;
     flex-flow: row nowrap;
     gap: 1rem 0.5rem;
+   
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    margin-bottom: 5rem;
 }
 .pagination .page-item {
     background-color: var(--color-gray-3);
