--- a/lab/templates/lab/partials/user.html
+++ b/lab/templates/lab/partials/user.html
@@ -1,8 +1,9 @@
 <div class="recipe recipe-list-item">
     <div class="recipe-content">    
-        <p> {{ patient.first_name }} {{ patient.last_name }}</p>
-        <p>CPF: {{ patient.cpf }}</p>
-        <p> {{ patient.birthday }} </p>
-        <p>ID: {{ patient.id }}</p>
+        <p><strong> Nome: </strong> {{ patient.first_name }} {{ patient.last_name }}</p>
+        <p><strong> CPF: </strong> {{ patient.cpf }}</p>
+        <p><strong> Nascimento: </strong>{{ patient.birthday }} </p>
+        <p><strong> ID: </strong> {{ patient.id }}</p>
+        <a href="{% url 'lab:usuario_detalhes' usuario_id=patient.id %}">Acessar perfil</a>
     </div>
 </div>
