--- a/base_static/global/css/styles.css
+++ b/base_static/global/css/styles.css
@@ -42,6 +42,9 @@
     --spacing-gutter-large: 4rem;
 }
 
+
+
+                /* PADRONIZAÇÕES */
 * {
     padding: 0;
     margin: 0;
@@ -56,6 +59,7 @@
 html {
     font-size: 62%;
 }
+
 html, body {
     height: 100%; 
 }
@@ -82,37 +86,44 @@ h5 {
     font-family: var(--font-headings)
 }
 
-/* teste */
+
+
+
+                    /* TESTE dos h1 que estão no lab*/
 .teste-home {
     margin: 0 auto;
     align-items: center;
     justify-content: center;
-    width: fit-content;     
+    width: fit-content;
+    margin-bottom: 3rem;     
+}
+.teste-home .user-profile-name {
+    display: inline;
+    color: rgb(142, 120, 221);
+    font-size: 3rem;
 }
 
-/*  Header  */
+
+
+
+                    /*  HEADER  */
 .container {
     max-width: 144rem;
     margin: 0 auto;
 }
-
-
 .main-header-container {
     background-color: rgba(69, 143, 255, 1);
     padding-bottom: 1.5rem;
 }
-
 .image-logo {
     width: 143.5px;
     height: 88.5px;
     margin-left: 6rem;
     margin-top: 1rem;
 }
-
 .main-logo-text {
     margin-top: -6rem;
 }
-
 .main-logo {
     font-size: 4rem;
     color: white;
@@ -126,12 +137,14 @@ h5 {
     margin-top: -4rem;
     
 }
-
 .main-logo-icon {
     margin-right: 2rem;
 }
 
-/*  SEARCH DE PESQUISA  */
+
+
+
+                    /*  SEARCH DE PESQUISA  */
 .search-form {
     border: .2rem solid var(--color-primary-dark);
     max-width: 64rem;
@@ -141,7 +154,6 @@ h5 {
     position: relative;
     transition: all 300ms ease-in-out;
 }
-
 .search-input,
 .search-button {
     border: none;
@@ -150,49 +162,43 @@ h5 {
     padding: 1rem;
     transition: all 300ms ease-in-out;
 }
-
 .search-input {
     width: 100%;
     padding-right: 3rem;
 }
-
 .search-button {
     position: absolute;
     top: 0;
     right: 0;
 }
-
 .search-button:focus {
     outline: 1px solid var(--color-primary);
     background: rgba(0, 0, 0, .05);
 }
-
 .search-form:focus-within {
     border-color: var(--color-primary);
     background: var(--color-white);
 }
-
 .search-form:focus-within .search-button {
     color: var(--color-primary);
 }
 
-/*  TUDO DA RECEITA  */
+
+
+                    /*  TUDO DO PROJETO PASSADO  */
 .main-content {
     padding-top: 0;
     margin: 3rem; 
-    margin-bottom: 6rem; /* improviso HTML NÃO OCUPA TUDO*/
+    margin-bottom: 6rem; 
 }
-
 .main-content-login {
     padding-top: 0;
 }
-
 .main-content-list {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(340px, 1fr));
     gap: var(--spacing-gutter-large);
 }
-
 .recipe {
     background: var(--color-white);
     box-shadow: -5px 5px 10px rgba(0, 0, 0, .2);
@@ -201,62 +207,50 @@ h5 {
     border-radius: .7rem;
     overflow: hidden;
 }
-
 .recipe img {
     max-width: 100%;
 }
-
 .recipe-list-item {
     max-width: 64rem;
     height: fit-content;
 }
-
 .recipe-list-item:hover {
     transform: scale(1.02);
     box-shadow: -8px 8px 18px rgba(0, 0, 0, .3);
 }
-
 .recipe-title-container {
     padding: var(--spacing-gutter-medium);
     padding-bottom: 2rem;
 }
-
 .recipe-title-container a{
     text-decoration: none;
     color: var(--color-primary-dark);
 }
-
 .recipe-author {
     padding: 0 var(--spacing-gutter-medium);
 }
-
 .recipe-content {
     padding: var(--spacing-gutter-medium);
     padding-top: 2rem;
 }
-
 .recipe-author-item {
     color: var(--color-gray-4);
     margin-right: 1rem;
 }
-
 .recipe-author a {
     color: var(--color-primary-dark);
     transition: all 300ms ease-in-out;
     text-decoration: none;
 }
-
 .recipe-author a:hover {
     color: var(--color-primary);
 }
-
 .recipe-meta-container {
     display: flex;
     flex-flow: row wrap;
     padding: var(--spacing-gutter-medium);
     background: var(--color-gray-0);
 }
-
 .recipe-meta {
     display: flex;
     flex-flow: column nowrap;
@@ -264,11 +258,9 @@ h5 {
     flex-grow: 1;
     text-align: center;
 }
-
 .recipe-meta-title {
     font-size: 1.6rem;
 }
-
 .recipe-footer a {
     background: var(--color-primary-dark);
     display: block;
@@ -278,25 +270,35 @@ h5 {
     padding: 1.5rem var(--spacing-gutter-medium);
     transition: all 300ms ease-in-out;
 }
-
 .recipe-footer a:hover {
     filter: brightness(2.2);
 }
-
 .main-content-detail  .recipe-list-item {
     max-width: 84rem;
     margin: 0 auto;
 }
-  
 .main-content-detail .recipe-list-item:hover {
     transform: scale(1);
     box-shadow: -5px 5px 15px rgba(0, 0, 0, 0.2);
 }
-
 .preparation-steps{
     padding: var(--spacing-gutter-medium);
 }
 
+
+
+                    /* USER - DETAILS*/
+.button-access-user-space {
+    margin: 0 auto;
+    justify-content: center;
+    align-items: center;
+    width: fit-content;
+    margin-top: 2rem;
+}            
+
+
+
+                    /*  FOOTER */
 .main-footer {
     display: flex;
     align-items: center;
@@ -307,18 +309,35 @@ h5 {
     bottom: 0;
     width: 100%;
 }
-
+.main-footer-other-base {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: rgba(69, 143, 255, 1);
+    padding: var(--spacing-gutter-large);
+    bottom: 0;
+    width: 100%;
+}
 .main-footer a {
     color: var(--color-white);
     text-decoration: none;
     transition: all 300ms ease-in-out;
 }
-
+.main-footer-other-base a {
+    color: var(--color-white);
+    text-decoration: none;
+    transition: all 300ms ease-in-out; 
+}
 .main-footer a:hover {
     filter: brightness(.8);
 }
+.main-footer-other-base a:hover {
+    filter: brightness(.8);
+}
 
-/*pagination CSS*/
+
+
+                        /*pagination CSS*/
 .pagination-content {
     display: flex;
     flex-flow: row nowrap;
@@ -333,18 +352,19 @@ h5 {
     background-color: var(--color-gray-3);
     padding: 0.5rem 1rem ;
 }
-
 .pagination .page-link {
     text-decoration: none;
     background-color: var(--color-primary);
     color: var(--color-white);
 }
-
 .pagination .page-current {
     background-color: var(--color-primary-dark);
 }
 
-/* Página de escolha de cadastro*/
+
+
+
+                    /* Página de escolha de cadastro*/
 .access-register-page {
     max-width: 84rem;   
     height: 15rem;
@@ -358,8 +378,8 @@ h5 {
     display: inline-block;
     padding: 1rem;
     text-align: center;
-    background-color: var(--color-success-dark);/* Cor de fundo do botão */
-    color: #fff; /* Cor do texto do botão */
+    background-color: var(--color-success-dark);
+    color: #fff; 
     text-decoration: none;
     border: none;
     border-radius: 4px;
@@ -379,24 +399,22 @@ h5 {
     text-align: center;
     word-wrap: break-word;
 }
-
 .btn-access-dcption h4 {
     margin: 1rem;
 }
-
 .btn-access-dcption .info-br-color {
     color: var(--color-gray-5)
 }
-/* Forms */
 
+
+
+
+                    /* FORMS */
 .form-content {
     max-width: 64rem;
     margin: 0 auto;
     margin-bottom: var(--spacing-gutter-medium);
-    /*ISSO QUE VOU TER QUE ALTERAR PARA FAZER UM FORM BACANA*/
-    /*background-color: #000;*/
 }
-
 .form-content label,
 .form-content .help-text,
 .errorlist {
@@ -406,25 +424,21 @@ h5 {
   list-style-type: none;
   
 }
-
 .errorlist {
     color: var(--color-error-dark);
 }
-
 .form-content input {
     width: 100%;
     padding: 1rem;
     border-radius: 0.4rem;
     border: 1px solid var(--color-primary-dark);
 }
-
 .form-content-grid {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
     gap: calc(var(--spacing-gutter-medium) / 2) var(--spacing-gutter-medium);
     
 }
-
 .form-content button {
     padding: 1rem 2rem;
     border: none;
@@ -437,14 +451,14 @@ h5 {
 
 .form-button-group {
     display: inline-block;
-    margin-top: 0; /* Isso remove a margem superior que é aplicada por padrão nas divs de botão */
+    margin-top: 0; 
 }
 
 .btn-register {
     display: inline-block;
     padding: 1rem 2rem;
-    background-color: #269fe6;/* Cor de fundo do botão */
-    color: #fff; /* Cor do texto do botão */
+    background-color: #269fe6;
+    color: #fff; 
     text-decoration: none;
     border: none;
     border-radius: 4px;
@@ -453,14 +467,13 @@ h5 {
     height: 4rem;
 }
 .form-content btn-register:hover {
-    background-color: #2086c2; /* Cor de fundo do botão ao passar o mouse */
+    background-color: #2086c2; 
 }
-
 .btn-voltar {
     display: inline-block;
     padding: 1rem 2rem;
-    background-color: var(--color-error-dark); /* Cor de fundo do botão */
-    color: #fff; /* Cor do texto do botão */
+    background-color: var(--color-error-dark); 
+    color: #fff; 
     text-decoration: none;
     border: none;
     border-radius: 4px;
@@ -468,17 +481,14 @@ h5 {
     transition: background-color 0.3s ease;
     height: 4rem;
 }
-
 .button-container {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-
 .inline-form {
     display: inline;
 }
-  
 .inline-form .plaintext-button {
     display: inline;
     border: none;
@@ -488,23 +498,25 @@ h5 {
     font-size: 1.6rem;
 }
 
-/* Form login personalizado */
+
+
+
+                /* Form login personalizado */
 .login-container {
     position: relative;
 }
-
 .login-card {
     position: absolute;
-    top: 50%; /* Ajuste verticalmente conforme necessário */
-    left: 50%; /* Centralize horizontalmente conforme necessário */
+    top: 50%; 
+    left: 50%; 
     transform: translate(-50%, 20%);
-    width: 600px; /* Largura do card de login */
-    height: 400px; /* Altura do card de login */
+    width: 600px; 
+    height: 400px;
     display: flex;
     justify-content: center;
     align-items: center;
     margin: 0 auto;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.35); /* Sombra no card de login */
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.35); 
     border-radius: 2rem;
 }
 .card-intro {
@@ -519,17 +531,15 @@ h5 {
     margin-top: 3rem;
     margin-left: 1rem;
 }
-
 .image-logo-login{
     width: 143.5px;
     height: 88.5px;
     margin-top: 7rem;
 }
-
 .retangulo-esquerda {
-    width: 200px; /* Largura do retângulo azul à esquerda */
-    height: 100%; /* Altura igual ao card de login */
-    background-color:rgba(69, 143, 255, 1); /* Cor de fundo do retângulo azul */
+    width: 200px; 
+    height: 100%; 
+    background-color:rgba(69, 143, 255, 1); 
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -548,7 +558,6 @@ h5 {
    margin-top: 1rem;
    color: #269fe6;
 }
-
 .wrapper .btn-cont {
     display: flex;
     flex-direction: column;
@@ -562,7 +571,6 @@ h5 {
     height: 4rem;
     margin: 3rem 0;
 }
-
 .input-box input {
     width: 100%;
     height: 100%;
@@ -577,11 +585,9 @@ h5 {
     padding: 2rem 4.5rem 2rem 2rem;
     font-size: 1.5rem;
 }
-
 .input-box::placeholder {
     color: var(--color-gray-3);
 }
-
 .input-box i {
     position: absolute;
     right: 20px;
@@ -589,15 +595,14 @@ h5 {
     transform: translateY(-50%);
     font-size: 20px;
 }
-
 .btn-register-temp {
     box-shadow: 0 0 10px rgba(0, 0, 0, .3);
     margin-top: 2rem;
     width: 13rem;
     text-align: center;
     padding: 1rem;
-    background-color: #269fe6;/* Cor de fundo do botão */
-    color: #fff; /* Cor do texto do botão */
+    background-color: #269fe6;
+    color: #fff; 
     text-decoration: none;
     border: none;
     border-radius: 4px;
@@ -607,9 +612,8 @@ h5 {
     font-weight: 600;
 }
 .wrapper .btn-register-temp:hover {
-    background-color: #2086c2; /* Cor de fundo do botão ao passar o mouse */
+    background-color: #2086c2; 
 }
-
 .wrapper #btn-temp {
     box-shadow: 0 0 10px rgba(0, 0, 0, .3);
     width: 13rem;
@@ -625,14 +629,14 @@ h5 {
     font-weight: 600;
     font-size: 15px;
 }
-
 #btn-temp:hover {
     background-color: rgb(61, 126, 61);
 }
 
 
 
-/* Messages */
+
+                    /* Messages */
 .messages-container {
     display: flex;
     flex-flow: column nowrap;
@@ -645,49 +649,45 @@ h5 {
   background: var(--color-gray-2);
   color: var(--color-dark-text);
 }
-
 .message-error {
   border: 1px solid var(--color-error-dark);
   background: var(--color-error-light);
   color: var(--color-error-dark);
 }
-
 .message-success {
   border: 1px solid var(--color-success-dark);
   background: var(--color-success-light);
   color: var(--color-success-dark);
 }
-
 .message-warning {
   border: 1px solid var(--color-warning-dark);
   background: var(--color-warning-light);
   color: var(--color-warning-dark);
 }
-
 .message-alert {
   border: 1px solid var(--color-alert-dark);
   background: var(--color-alert-light);
   color: var(--color-alert-dark);
 }
-
 .message-info {
   border: 1px solid var(--color-info-dark);
   background: var(--color-info-light);
   color: var(--color-info-dark);
 }
-
 .message-debug {
   border: 1px solid var(--color-debug-dark);
   background: var(--color-debug-light);
   color: var(--color-debug-dark);
 }
 
-/* Menu */
 
+
+
+
+                        /* Menu */
 .hidden-text {
     display: none;
 }
-
 .menu-container {
     position: fixed;
     top: 0;
@@ -700,15 +700,12 @@ h5 {
     z-index: 2;
     transition: all 300ms ease-in-out;
 }
-  
 .menu-container a {
     color: var(--color-white);
 }
-
 .menu-hidden {
     left: -255px;
 }
-  
 .button-show-menu {
     position: fixed;
     left: 265px;
@@ -729,14 +726,11 @@ h5 {
     transition: all 150ms ease-in-out;
     color: #959595;
 }
-  
-  
 .button-show-menu-visible {
     visibility: visible;
     opacity: 1;
     left: 5px;
 }
-  
 .button-close-menu {
     position: absolute;
     top: 1rem;
@@ -752,7 +746,6 @@ h5 {
     transition: all 150ms ease-in-out;
     color: #959595;
 }
-  
 .menu-nav {
     display: flex;
     flex-flow: column wrap;
@@ -761,14 +754,12 @@ h5 {
     margin-left: 3rem;
     margin-top: 2rem;
 }
-  
 .menu-nav a {
     margin-top: 1rem;
     width: 100%;
     padding: 1rem;
     text-decoration: none;
 }
-
 .menu-nav a:hover {
     transition: all 300ms ease-in-out;
     color: #959595;
@@ -780,27 +771,24 @@ h5 {
 }
 
 
-/* Generics */
 
+
+                    /* Generics */
 .center {
     text-align: center;
 }
-  
 .m-x {
     margin: 0 var(--spacing-gutter-medium);
 }
-  
 .m-y {
     margin: var(--spacing-gutter-medium) 0;
 }
-
 @media (max-width: 600px) {
     .form-content-grid,
     .main-content-list {
       grid-template-columns: repeat(auto-fit, minmax(100%, 1fr));
     }
   }
-
 @media (max-width: 600px) {
     .main-logo {
         flex-flow: column nowrap; /* Alinha a imagem e o texto verticalmente */
