--- a/lab/templates/lab/pages/alterar_dados.html
+++ b/lab/templates/lab/pages/alterar_dados.html
@@ -4,7 +4,11 @@
 
 {% block content %}
 <div class="main-content center container">
-    <h2 class="teste-home">Editar perfil de {{ user.first_name }} {{ user.last_name }}</h2>
+    <h2 class="teste-home">Editar perfil de 
+        <span class="user-profile-name">
+            '{{ user.first_name }} {{ user.last_name }}'
+        </span> 
+    </h2>
 </div>
     {% include 'global/partials/messages.html' %}  
     {% include 'global/partials/form.html' %}
