--- a/lab/templates/lab/pages/usuario_detalhes.html
+++ b/lab/templates/lab/pages/usuario_detalhes.html
@@ -1,11 +1,16 @@
-{% extends 'global/base_search_page.html' %}    
+{% extends 'global/base_user.html' %}    
 
 {% block title %}Perfil |{% endblock title %}
 
 {% block content %}
 {% include 'global/partials/messages.html' %}
     <div class="main-content">
-        <h2 class="teste-home">Perfil de {{ user.first_name}} {{user.last_name}} </h2>
+        <h3 class="teste-home">
+            Perfil de 
+            <span class="user-profile-name">
+               '{{ user.first_name}} {{user.last_name}}'
+            </span> 
+        </h3>
         <div class="recipe recipe-list-item">
             <div class="recipe-content">
                 <p><strong>Nome:</strong> {{ user.first_name }} {{ user.last_name }}</p>
@@ -16,7 +21,11 @@
                 <p><strong>Cidade:</strong> {{ user.city }}</p>
                 <p><strong>Estado:</strong> {{ user.state }}</p>
                 <p><strong>ID:</strong> {{ user.id }}</p>
-                <a href="{% url 'lab:alterar_dados' usuario_id=user.id %}">Editar perfil deste usuário</a>
+                <div class="button-access-user-space">
+                    <a href="{% url 'lab:alterar_dados' usuario_id=user.id %}" class="btn-access">
+                        Editar perfil
+                    </a>
+                </div>
             </div>
         </div>
         
