--- a/lab/templates/lab/pages/laudo_enviar.html
+++ b/lab/templates/lab/pages/laudo_enviar.html
@@ -4,8 +4,9 @@
 
 {% block content %}
 {% include 'global/partials/messages.html' %}
-    <div class="main-content">
-        <h2 class="teste-home">Envie a imagem microscópica com os seguintes dados</h2>
-        {% include "global/partials/form.html" %}
-    </div>
+<div class="main-content">
+    <h2 class="teste-home">Envie a imagem microscópica com os seguintes dados</h2>
+    {% include "global/partials/search_envio.html" %}
+    {% include "global/partials/form_envio.html" %}
+</div>
 {% endblock content %}
