--- a/base_templates/global/partials/header.html
+++ b/base_templates/global/partials/header.html
@@ -2,9 +2,11 @@
     <div class="main-header container">
         <img src="/media/lab/logo/ah-logo.png" alt="Logo" class="image-logo">
         
-        <h1>
-            <span class="main-logo main-logo-text">Laboratório</span>
-        </h1>
+        <a href="{% url 'lab:home' %}" class="logo-link">
+            <h1>
+                <span class="main-logo main-logo-text">Laboratório</span>
+            </h1>
+        </a>
 
     </div>
 </header>
