--- a/lab/templates/lab/pages/alterar_dados.html
+++ b/lab/templates/lab/pages/alterar_dados.html
@@ -6,7 +6,7 @@
 <div class="main-content center container">
     <h2 class="teste-home">Editar perfil de 
         <span class="user-profile-name">
-            '{{ user.first_name }} {{ user.last_name }}'
+            '{{ profile_user.first_name }} {{ profile_user.last_name }}'
         </span> 
     </h2>
 </div>
