Header style update

--- a/base_templates/global/partials/header.html
+++ b/base_templates/global/partials/header.html
@@ -3,10 +3,15 @@
         <img src="/media/lab/logo/ah-logo.png" alt="Logo" class="image-logo">
         
         <a href="{% url 'lab:home' %}" class="logo-link">
-            <h1>
-                <span class="main-logo main-logo-text">Laboratório</span>
+            <h1 class="main-logo">
+                <img src="/media/lab/logo/diagnose.png" alt="titulo" class="image-title">      
             </h1>
+            <i class='bx bxs-donate-blood'></i>
         </a>
 
+        <h4 class="hello-user">
+            <span class="hello"> Olá,</span>
+            <span class="name">{{user.username}}!</span>
+        </h4>
     </div>
 </header>
