--- a/base_static/global/css/styles.css
+++ b/base_static/global/css/styles.css
@@ -107,44 +107,68 @@ h5 {
 
 
 
-                    /*  HEADER  */
-.container {
-    max-width: 144rem;
-    margin: 0 auto;
-}
+                    /*  HEADER  */          
 .main-header-container {
     background-color: rgba(69, 143, 255, 1);
-    padding-bottom: 1.5rem;
+}
+.main-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem;
+}
+.container {
+    max-width: 144rem;
 }
 .image-logo {
     width: 143.5px;
     height: 88.5px;
     margin-left: 6rem;
-    margin-top: 1rem;
+    margin-right: 36rem;
 }
-.main-logo-text {
-    margin-top: -6rem;
+.image-title {
+    width: 201px;
+    height: 42px;
+}
+.logo-link {
+    text-decoration: none;
+    display: flex;
+}
+.logo-link .bx {
+    margin-left: 0.4rem;
+    font-size: 3.4rem;
+    color: rgb(255, 255, 255);
 }
 .main-logo {
     font-size: 4rem;
     color: white;
     text-decoration: none;
-    display: flex;
-    flex-flow: row nowrap;
-    align-items: center;
-    justify-content: center;
-    width: fit-content;
-    margin: 0 auto;
-    margin-top: -4rem;
-    
-}
-.logo-link {
-    text-decoration: none;
-}
-.main-logo-icon {
-    margin-right: 2rem;
+    margin-left: auto;
 }
 
+.bx .bxs-donate-blood {
+    margin-right: 9rem;
+    margin-bottom: 0rem;
+    font-size: 30rem;
+}
+.hello-user{
+    color: #ffffff;
+    display: flex;
+    flex-direction: column;
+    align-items: center ; 
+    margin-left: auto;
+    margin-right: 2rem;
+   }
+.hello-user .hello {
+    white-space: nowrap;
+    color: var(--color-gray-9);
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+.hello-user .name {
+    
+    font-weight: 500;
+    
+}
 
 
 
