--- a/lab/templates/lab/partials/report.html
+++ b/lab/templates/lab/partials/report.html
@@ -1,7 +1,7 @@
 <div class="report report-list-item">
     <div class="report-content">    
         <p><strong>Data de Envio:</strong> {{ laudo.cpf }}</p>
-        <p><strong>Hora de Envio:</strong> {{ laudo.created_at }}</p>
+        <p><strong>Data de Envio:</strong> {{ laudo.created_at }}</p>
         <p><strong>Imagem do Laudo:</strong></p>   
         <img src="{{ laudo.image.url }}" alt="Imagem do Laudo"> 
     </div>
