--- a/lab/templates/lab/pages/laudo_detalhes.html
+++ b/lab/templates/lab/pages/laudo_detalhes.html
@@ -3,19 +3,11 @@
 
 {% block content %}
 {% include 'global/partials/messages.html' %}
-    <div class="main-content">
-        {% if laudos %}
-            <h1 class="teste-home">
-                Laudos de {{ profile_user.first_name }} {{ profile_user.last_name}}: 
-            </h1>
-            
-        <div class="report-container">
-                {% for laudo in laudos %}
-                    {% include 'lab/partials/report.html' %}
-                {% endfor %}
-            {% else %}
-                <img src="/media/lab/others/sem-laudo.png" alt="Logo" class="image-no-report">
-            {% endif %}
-        </div>
+    <div class="main-content center">
+        <p><strong>Data de Envio:</strong> {{ laudo.created_at }}</p>
+        <p> <strong> CPF do paciente: </strong></p> {{ laudo.cpf }}  
+        <p> <strong> nome do paciente: </strong></p> {{ laudo.name }} 
+        <p><strong>Imagem do Laudo:</strong></p>   
+        <img src="{{ laudo.image.url }}" alt="Imagem do Laudo"> 
     </div>
 {% endblock content %}
