--- a/lab/templates/lab/pages/usuario_detalhes.html
+++ b/lab/templates/lab/pages/usuario_detalhes.html
@@ -26,7 +26,7 @@
                 <p><strong>Estado:</strong> {{ profile_user.state }}</p>
                 <p><strong>ID:</strong> {{ profile_user.id }}</p>
                 <div class="button-access-user-space">
-                    <a href="{% url 'lab:laudo_detalhes' usuario_id=profile_user.id %}" class="btn-access">
+                    <a href="{% url 'lab:laudo_perfil' usuario_id=profile_user.id %}" class="btn-access">
                        <i class='bx bxs-band-aid'></i>‎ ‎Visualizar laudos 
                     </a>
                     {% if user|can:'alterar_dados'%}
