Import yolo detection model and fix html template

--- a/lab/templates/lab/pages/home.html
+++ b/lab/templates/lab/pages/home.html
@@ -6,7 +6,7 @@
 {% include 'global/partials/messages.html' %}
     <div class="main-content">
         <h2 class="teste-home">Olá,  {{ user.username }} </h2>
-        <p class="paragraf">Seja bem vindo a minha pagina, sinta se a vontade</p>
+        <p class="teste-home">Seja bem vindo a minha pagina, sinta se a vontade</p>
     </div>
 {% endblock content %}
 
