--- a/base_static/global/css/styles.css
+++ b/base_static/global/css/styles.css
@@ -387,17 +387,59 @@ h5 {
 .report img{
     margin-top: 1rem;
     max-width: 100%;
-    height: auto;
+    max-height: 100%;
+    
 }
 .image-no-report{
     display: block;
     margin: 0 auto;
     width: 28%; 
     height: 28%;
+} 
+/*detalhes*/
+.report-image-box {
+    max-width: 50rem;
+    max-height: 50rem;
 }
-                    
+.report-image-box img {
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.35);
+    border: 0.5px solid var(--color-gray-3);
+    border-radius: 5px;
+    margin-top: 2rem;
+    max-width: 100%;
+    max-height: 100%;
+}           
 
-
+/* table */
+.report-description-container {
+    background-color: #000;
+    width: fit-content;
+    margin: 0 auto;
+    margin-bottom: 2rem;    
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.35);
+    border: 0.5px solid var(--color-gray-3);
+    border-radius: 5px;
+    overflow: hidden;
+}
+.table-container {
+    overflow: hidden;
+}
+.report-detail-table {
+    border-collapse: collapse;
+    width: 100%;
+}
+.report-detail-table td {
+    padding: 0.9rem 2rem;
+    text-align: left;
+}
+.cell-white {
+    background-color: #fff;
+    color: var(--color-primary-dark);  
+}
+.cell-black {
+    background-color: var(--color-primary-dark);
+    color: #fff;
+}
 
                 /* REPORT SEARCH - PESQUISA DE LAUDO */
 .search-container-report {
@@ -489,6 +531,25 @@ h5 {
     background-color: rgb(6, 100, 6);   
 }
 
+                    /* IMAGE ENVIAR */
+.patient-list {
+    width: fit-content;
+    height: fit-content;
+    padding: 1rem;
+    margin: 0 auto;
+    justify-content: center;
+    align-items: center;
+}
+.patient-radio-list {
+    margin-top: 0rem;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.15);
+    background-color: white;
+    border-radius: 8px;
+    padding: 1rem;
+}
+.patient-radio-list li {
+    list-style-type: none;
+}
                     /*  FOOTER */
 .main-footer {
     display: flex;
