--- a/base_templates/global/partials/form_envio.html
+++ b/base_templates/global/partials/form_envio.html
@@ -8,20 +8,22 @@
 
       <div class="patient-list">
         {% if patients %}
-            <h3>Lista de Pacientes:</h3>
-            <ul>
-                {% for patient in patients %}
-                    <li>
-                        <input type="radio" name="selected_patient" value="{{ patient.id }}">
-                        {{ patient.first_name }} {{ patient.last_name }} - CPF: {{ patient.cpf }}
-                    </li>
-                {% endfor %}
-            </ul>
+            <h3 class="teste-home">Lista de Pacientes:</h3>
+            <div class="patient-radio-list">
+              <ul>
+                  {% for patient in patients %}
+                      <li>
+                          <input type="radio" name="selected_patient" value="{{ patient.id }}">
+                          {{ patient.first_name }} {{ patient.last_name }} - CPF: {{ patient.cpf }}
+                      </li>
+                  {% endfor %}
+              </ul>
+            </div>
         {% else %}
             <p>Nenhum paciente encontrado.</p>
         {% endif %}
-        
-    </div>
+      </div>
+      
       <div class="form-content form-content-grid">  
         {% for field in form %}
           <div class="form-group">
