--- a/lab/templates/lab/pages/laudo_enviar.html
+++ b/lab/templates/lab/pages/laudo_enviar.html
@@ -1,4 +1,4 @@
-{% extends 'global/base.html' %}    
+{% extends 'global/base_report.html' %}    
 
 {% block title %}Envio de laudo |{% endblock title %}
 
