Showing returned image after analyses at template

--- a/lab/templates/lab/pages/laudo_detalhes.html
+++ b/lab/templates/lab/pages/laudo_detalhes.html
@@ -32,6 +32,13 @@
                 <img src="{{ laudo.image.url }}" alt="Imagem do Laudo"> 
             </div>
 
+            {% for detected_image in detected_images %}
+                <div class="report-image-box">
+                    <h4> Resposta:</h4>   
+                    <img src="{{ detected_image.detected_img.url }}" alt="Deteccao"> 
+                </div>
+            {% endfor %}
+
             
 
         </div>
